[gd_scene load_steps=13 format=3 uid="uid://b0vmxnd68vv2l"]

[ext_resource type="PackedScene" uid="uid://ct15sak82m0y0" path="res://scenes/dashboard/project_list/project_list.tscn" id="1_3km4k"]
[ext_resource type="Script" uid="uid://dyoau4rnapqbw" path="res://scenes/dashboard/dashboard.gd" id="1_ha5bl"]
[ext_resource type="Texture2D" uid="uid://b1l8alx48r1po" path="res://meta/icons/tilte_bar_logo.svg" id="1_iwa43"]
[ext_resource type="PackedScene" uid="uid://cyjfqss5ytw51" path="res://scenes/dashboard/module_list/module_list.tscn" id="3_7agwo"]
[ext_resource type="Script" uid="uid://4foqtuiobeyl" path="res://components/ui/tab_button_container/tab_button_container.gd" id="3_eb81t"]
[ext_resource type="PackedScene" uid="uid://dm0udoa17mh36" path="res://components/ui/icon_sidebar_button/icon_sidebar_button.tscn" id="4_5ihmn"]
[ext_resource type="Texture2D" uid="uid://ksbs0rl6gsvh" path="res://meta/icons/module.svg" id="5_pq66u"]
[ext_resource type="Texture2D" uid="uid://bhkx7k5emcmjl" path="res://meta/icons/theme.svg" id="6_4jrbh"]
[ext_resource type="Texture2D" uid="uid://dip3j4w5jl5nv" path="res://meta/icons/settings.svg" id="7_yxfa0"]

[sub_resource type="Animation" id="Animation_7agwo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CoverPanel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CoverPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ha5bl"]
resource_name = "reveal_dashboard"
length = 0.3
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CoverPanel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CoverPanel")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.26666668),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmip6"]
_data = {
&"RESET": SubResource("Animation_7agwo"),
&"reveal_dashboard": SubResource("Animation_ha5bl")
}

[node name="Dashboard" type="Panel" node_paths=PackedStringArray("content_container", "screen_label", "tab_button_container", "animation_player", "modules_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"nPanelSecondaryFlat"
script = ExtResource("1_ha5bl")
content_container = NodePath("Content")
screen_label = NodePath("ScreenLabel")
tab_button_container = NodePath("TabButtonContainer")
animation_player = NodePath("AnimationPlayer")
modules_button = NodePath("TabButtonContainer/ModulesButton")

[node name="Content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 54.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Projects" parent="Content" instance=ExtResource("1_3km4k")]
layout_mode = 1

[node name="Modules" parent="Content" instance=ExtResource("3_7agwo")]
visible = false
layout_mode = 1

[node name="Themes" type="Panel" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 9.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="LSpace" type="Control" parent="InfoContainer"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="InfoButton" type="Button" parent="InfoContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 2
theme_type_variation = &"nButtonIconFlat"
theme_override_constants/icon_max_width = 110
theme_override_constants/align_to_largest_stylebox = 1
icon = ExtResource("1_iwa43")

[node name="MSpace" type="Control" parent="InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VersionLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_type_variation = &"nLabelSecondary"
text = "v0.0.0"

[node name="Control" type="Control" parent="InfoContainer"]
custom_minimum_size = Vector2(18, 0)
layout_mode = 2

[node name="ScreenLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = 16.5
offset_right = 43.5
offset_bottom = 36.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Project List"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabButtonContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 53.0
offset_right = 53.0
offset_bottom = -18.0
grow_vertical = 2
theme_override_constants/separation = 10
vertical = true
script = ExtResource("3_eb81t")
selected_index = 0
metadata/_custom_type_script = "uid://4foqtuiobeyl"

[node name="HSeparator" type="HSeparator" parent="TabButtonContainer"]
layout_mode = 2

[node name="VSpace" type="Control" parent="TabButtonContainer"]
layout_mode = 2

[node name="ProjectListButton" parent="TabButtonContainer" instance=ExtResource("4_5ihmn")]
layout_mode = 2
button_pressed = true
button_label_text = "Projects"

[node name="ModulesButton" parent="TabButtonContainer" instance=ExtResource("4_5ihmn")]
layout_mode = 2
icon = ExtResource("5_pq66u")
button_label_text = "Modules"

[node name="ThemesButton" parent="TabButtonContainer" instance=ExtResource("4_5ihmn")]
layout_mode = 2
icon = ExtResource("6_4jrbh")
button_label_text = "Themes"

[node name="VSpace2" type="Control" parent="TabButtonContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsButton" parent="TabButtonContainer" instance=ExtResource("4_5ihmn")]
visible = false
layout_mode = 2
icon = ExtResource("7_yxfa0")
button_label_text = "Settings"

[node name="CoverPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qmip6")
}

[connection signal="switch_screen_request" from="Content/Projects" to="." method="_on_project_list_switch_screen_request"]
[connection signal="updates_available" from="Content/Modules" to="." method="_on_modules_updates_available"]
[connection signal="updates_cleared" from="Content/Modules" to="." method="_on_modules_updates_cleared"]
[connection signal="selection_changed" from="TabButtonContainer" to="." method="_on_tab_button_container_selection_changed"]
